beginnings of adding average temp data

--- a/SolarSystem/Base.lproj/LaunchScreen.storyboard
+++ b/SolarSystem/Base.lproj/LaunchScreen.storyboard
@@ -16,8 +16,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Our Solar System" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OPk-dp-fUn">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Our Solar System" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OPk-dp-fUn">
                                 <rect key="frame" x="238" y="178" width="124" height="231"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="124" id="qfD-Md-ZJ4"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -25,8 +28,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="OPk-dp-fUn" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="2Yr-XD-fsa"/>
-                            <constraint firstItem="OPk-dp-fUn" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="S6y-Xi-vDq"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="OPk-dp-fUn" secondAttribute="bottom" constant="191" id="Rax-6G-fRH"/>
+                            <constraint firstItem="OPk-dp-fUn" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="158" id="fH1-xd-jPI"/>
+                            <constraint firstItem="OPk-dp-fUn" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="tP4-c5-Dxg"/>
                         </constraints>
                     </view>
                 </viewController>
